--- a/client/src/components/Card/style.scss
+++ b/client/src/components/Card/style.scss
@@ -42,12 +42,14 @@ body {
 .card {
    position: relative;
    background: $white;
-   max-width: 500px;
-   margin: 20px auto;
+   max-width: 80%;
+   margin: 100px auto;
+   max-height: 50%;
    box-shadow: 0px 0px 30px 2px #000;
    .header {
       background: $food;
       background-size: cover;
+      
       min-height: 350px;
          .icon a .fa-heart-o {
          position: absolute;
