--- a/client/src/components/Card/style.scss
+++ b/client/src/components/Card/style.scss
@@ -15,17 +15,17 @@ $heart: #17BEBB;
 $star: #FFE500;
 $button: #EF3E36;
 
-* {
-   margin: 0;
-   padding: 0;
-   font-family: $font;
-   list-style-type: none;
-   text-decoration: none;
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   -o-box-sizing: border-box;
-   box-sizing: border-box;
-}
+// * {
+//    margin: 0;
+//    padding: 0;
+//    font-family: $font;
+//    list-style-type: none;
+//    text-decoration: none;
+//    -webkit-box-sizing: border-box;
+//    -moz-box-sizing: border-box;
+//    -o-box-sizing: border-box;
+//    box-sizing: border-box;
+// }
 
 img {
    max-width: 100%;
